<resources>
    <string name="app_name">CreativeWorld</string>

    <!--DateTimeFormat-->
    <string name="seconds_ago">%1$d s ago</string>
    <string name="minutes_ago">%1$d min ago</string>
    <string name="hours_ago">%1$d hours ago</string>
    <string name="days_ago">%1$d days ago</string>

    <!--BottomAppBar-->
    <string name="action_comment">Comment</string>


    <!--BottomNavigationDrawer-->
    <string name="navigation_home_page">Index</string>
    <string name="navigation_favorite">Favorite</string>
    <string name="navigation_upload_videos">MyVideos</string>
    <string name="navigation_community">Community</string>

    <!--VideoDetailFragment-->
    <string name="video_card_transition_name" translatable="false">video_card_%1$s</string>
    <string name="video_detail_transition_name" translatable="false">video_detail_transition</string>
    <string name="action_follow_user">Follow</string>
    <string name="copy_forbid_presentation">Unauthorized reproduction is prohibited</string>
    <string name="uploader_fans_number">%1$s Fans</string>
    <string name="uploader_videos_number">%1$s Videos</string>
    <string name="empty_video_description">Description Empty!</string>


    <!--VideoBottomNavigationMenu-->
    <string name="menu_item_share">Share</string>
    <string name="menu_item_add_to_favorite">Add To Favorite</string>
    <string name="menu_item_no_interest">No Interest</string>

    <!--LoginFragment -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="login_failed">Login failed</string>
    <string name="go_to_register">Register</string>

    <!--RegisterFragment-->
    <string name="prompt_username">Username</string>
    <string name="action_register">Register</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="register_failed">Register failed</string>
    <string name="register_success">Register succeed</string>

    <!--NetworkStateItem-->
    <string name="network_retry">Retry</string>

    <!--TweetPreviewFragment-->
    <string name="tweet_card_preview_transition_name" translatable="false">tweet_card_%1$s</string>

    <!--TweetDetailFragment-->
    <string name="tweet_card_detail_transition_name" translatable="false">tweet_card_detail</string>

    <!--UploadVideoFragment-->
    <string name="change_video_cover">Change a cover</string>
    <string name="hint_change_video_title">VIDEO TITLE</string>
    <string name="hint_change_video_desc">VIDEO DESCRIPTION</string>
    <string name="select_complete">Selected</string>
    <string name="action_upload">Upload</string>

    <!--UserInterfaceFragment-->
    <string name="follow_num">Follow</string>
    <string name="fans_num">Fans</string>
    <string name="beliked_num">Be Liked</string>

    <!--CommentFragment-->
    <string name="hint_action_comment">Comment</string>



</resources>